<resources>
    <string name="app_name">login screen</string>
    <string name="title_activity_client_qui">ClientQui</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="profile0">الحساب الشخصي</string>
    <string name="profile1">اسم المستخدم</string>
    <string name="profile2">الاسم</string>
    <string name="profile3">كلمة المرور</string>
    <string name="profile4">البريد الإلكتروني</string>

    <string name="profile5">معلومات صحتي</string>
    <string name="profile6">الوزن</string>
    <string name="profile7">الطول</string>
    <string name="profile">BMI</string>
    <string name="profile8">الهدف:</string>
    <string name="profileButton">button</string>

    <string name="scan">مسح الباركود</string>
    <string name="scan1">مسح</string>
    <string name="bmi">BMI</string>
    <string name="name">Name</string>

    <string name="dece">هل يوجد جزء من الخطة الغذائية لم يعجبك؟ لامسكلة اطلاقا ! فقط حدد ماهو من الخيارات الموجودة بالاسفل وسوف نقوم بعمل خطة جديدة لك لا تتضمنه.</string>
    <string name="plan">إنشاء خطة بديلة</string>
    <string name="r3">RadioButton</string>
    <string name="r4">RadioButton</string>
    <string name="r2">RadioButton</string>
    <string name="r5">RadioButton</string>
    <string name="r1">RadioButton</string>
    <string name="stats">لك مزاج للطبخ؟! رائع لدينا بعض من الوصفات لأجلك</string>
    <string name="fromdatabase">نستخرج المعلومات من الداتابيس</string>
    <string name="persomImage">TODO</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>