<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlternativeDietPlanScreens">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="117dp"
        android:text="@string/plan"
        android:textColor="#0B0909"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="299dp"
        android:layout_height="137dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="3dp"
        android:text="@string/dece"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/radioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="271dp"
        android:layout_height="65dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="45dp"
        android:background="#B8F3BB"
        android:text="@string/r1"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="45dp"
        android:background="#B8F3BB"
        android:text="@string/r2"
        app:layout_constraintBottom_toTopOf="@+id/radioButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="45dp"
        android:background="#B8F3BB"
        android:text="@string/r3"
        app:layout_constraintBottom_toTopOf="@+id/radioButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="200dp"
        android:background="#B8F3BB"
        android:text="@string/r4"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="271dp"
        android:layout_height="58dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="152dp"
        android:background="#B8F3BB"
        android:text="@string/r5"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

</androidx.constraintlayout.widget.ConstraintLayout>